--- a/curiosidades.html
+++ b/curiosidades.html
@@ -45,8 +45,8 @@
                   <a class="dropdown-item" href="seasonthree.html">3ª Temporada</a>
                 </div>
               </li> 
-              <a href="https://www.instagram.com/strangerthingstv/" target="_blank"><img id="rede1" class="img-fluid" src="imagens/instagram_logo.png" alt="instagran"></a>
-              <a href="https://twitter.com/Stranger_Things" target="_blank"><img id="rede2" class="img-fluid" src="imagens/twitter-logo-4.png" alt="twitter"></a>
+              <li><a href="https://www.instagram.com/strangerthingstv/" target="_blank"><img id="rede1" class="img-fluid" src="imagens/instagram_logo.png" alt="instagran"></a></li>
+              <li><a href="https://twitter.com/Stranger_Things" target="_blank"><img id="rede2" class="img-fluid" src="imagens/twitter-logo-4.png" alt="twitter"></a></li>
             </ul>
           </div>
         </nav>
@@ -78,21 +78,21 @@
             <img class="imagens" src="imagens/primeiro_beijo.jpg" alt="Stranger Things">
         </ol>
         <h3 class="curih4">Ler mais</h3>
-        <ul>
-
-            <li><a href="">Stranger Things: Imagem de bastidores revela retorno de personagem importante na 4ª temporada</a></li>
-            <li><a href="">Stranger Things: Confira 20 referências e easter-eggs da 3ª temporada</a></li>
-            <li><a href="">Stranger Things: David Harbour revela que 4ª temporada já é sua favorita</a></li>
+        <ul class="oneUl">
+          <li><a class="oneA" href="">Stranger Things: A mais assustadora!</a></li>
+          <li><a class="oneA" href="">Stranger Things: Teorias da 4ª Temporada</a></li>
+          <li><a class="oneA" href="">Stranger Things: Você conhece o Demogorgon?</a></li>
+          <li><a class="oneA" href="">Stranger Things: Melhores Episodeos</a></li>
         </ul>
       </div>
     </div>
 
 
-    <!-- RODAPÉ -->  
+      <!-- RODAPÉ -->  
 
-    <div id="footer">
-      <p><i>Copyright ©2021 - by Matheus Oliveira</i><a href="https://www.instagram.com/matheusfoliveira_/?hl=pt-br" target="_blank"><img class="imgfooter img-fluid" src="imagens/instagram_logo.png"></a></p>     
-    </div>
+      <div id="footer">
+        <p><i>Copyright ©2021 - by Matheus Oliveira</i><a href="https://www.instagram.com/matheusfoliveira_/?hl=pt-br" target="_blank"><img class="imgfooter img-fluid" src="imagens/instagram_logo.png"></a><a href="https://github.com/mat1135"><img class="imgfooter img-fluid" src="imagens/GitHub-logo.png"></a></p>     
+      </div>
 
       <!-- JavaScript (Opcional) -->
       <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
