--- a/seasonone.html
+++ b/seasonone.html
@@ -26,8 +26,8 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home <span class="sr-only">(atual)</span></a>
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="Elenco.html">Elenco</a>
@@ -35,9 +35,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="curiosidades.html">Curiosidades</a>
               </li>
-              <li class="nav-item dropdown">
+              <li class="nav-item dropdown active">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Temporadas
+                  Temporadas <span class="sr-only">(atual)</span>
                 </a>
                 <div class="dropdown-menu" style="background: #f7003e;" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="seasonone.html">1ª Temporada</a>
@@ -61,7 +61,15 @@
           <p class="onerecuo"> Uma carta de amor aos clássicos sobrenaturais dos anos 80, Stranger Things é a história de um jovem que desaparece no ar. Enquanto amigos, família e polícia local procuram por respostas, eles são atraídos para um mistério extraordinário envolvendo experimentos ultrassecretos do governo, forças. Stranger Things é estrelado por Winona Ryder, David Harbor, Finn Wolfhard, Millie Brown, Gaten Matarazzo, Caleb McLaughlin, Noah Schnapp, Natalia Dyer, Cara Buono, Charlie Heaton e Matthew Modine. Matt Duffer e Ross Duffer (Wayward Pines, Hidden) atuam como roteiristas, diretores e co-showrunners da série e são produtores executivos junto com Shawn Levy e Dan Cohen por meio de seu banner de entretenimento 21 Laps (The Spectacular Now, Night At The Museum , Real Steel, Date Night). Shawn Levy também atua como diretor. Stranger Things é uma série original da Netflix. "</p>
           <p class="onerecuo">Hawkins, Indiana. 1983. Um garoto de 12 anos desaparece misteriosamente. A família e a polícia procuram respostas, mas acabam se deparando com um experimento secreto do governo. Enquanto isso, os amigos do menino iniciam suas próprias investigações, o que os levam a um extraordinário mistério envolvendo forças sobrenaturais e uma garotinha muito, muito estranha.</p>
         </div>
-        <center><img class="img-fluid" src="imagens/img temp1-2te.jpg" alt=""></center>
+        <ul id=album-fotos>
+          <li id=fotos01></li>
+          <li id=fotos02></li>
+          <li id=fotos03></li>
+          <li id=fotos04></li>
+          <li id=fotos05></li>
+          <li id=fotos06></li>
+        </ul> 
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <h4 class="oneh4">Episodeos</h4>
         <ol class="oneOl">
           <li>"The Vanishing of Will Byers"</li>
@@ -73,22 +81,25 @@
           <li>"The Bathtub"</li>
           <li>"The Upside Down"</li>
         </ol>
+        <br>
         <h4 class="oneh4">Trailer</h4>
         <p class="onerecuo" style="font-family: Arial, Helvetica, sans-serif; font-size: 12pt;">Trailer da 1ª Temporada de Stranger Things:</p>
         <center><iframe width="560" height="315" src="https://www.youtube.com/embed/b9EkMc79ZSU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
-        <h4 class="oneh4">Ler mais</h4>
+        <h3 class="curih4">Ler mais</h3>
         <ul class="oneUl">
-          <li><a class="oneA" href="">Stranger Things: Imagem de bastidores revela retorno de personagem importante na 4ª temporada</a></li>
-          <li><a class="oneA" href="">Stranger Things: Confira 20 referências e easter-eggs da 3ª temporada</a></li>
-          <li><a class="oneA" href="">Stranger Things: David Harbour revela que 4ª temporada já é sua favorita</a></li>
+          <li><a class="oneA" href="">Stranger Things: A mais assustadora!</a></li>
+          <li><a class="oneA" href="">Stranger Things: Teorias da 4ª Temporada</a></li>
+          <li><a class="oneA" href="">Stranger Things: Você conhece o Demogorgon?</a></li>
+          <li><a class="oneA" href="">Stranger Things: Melhores Episodeos</a></li>
         </ul>
       </div>
 
       <!-- RODAPÉ -->  
 
       <div id="footer">
-        <p><i>Copyright ©2021 - by Matheus Oliveira</i><a href="https://www.instagram.com/matheusfoliveira_/?hl=pt-br" target="_blank"><img class="imgfooter img-fluid" src="imagens/instagram_logo.png"></a></p>     
+        <p><i>Copyright ©2021 - by Matheus Oliveira</i><a href="https://www.instagram.com/matheusfoliveira_/?hl=pt-br" target="_blank"><img class="imgfooter img-fluid" src="imagens/instagram_logo.png"></a><a href="https://github.com/mat1135"><img class="imgfooter img-fluid" src="imagens/GitHub-logo.png"></a></p>     
       </div>
+      
       <!-- JavaScript (Opcional) -->
       <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
