--- a/seasontwo.html
+++ b/seasontwo.html
@@ -26,8 +26,8 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home <span class="sr-only">(atual)</span></a>
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="Elenco.html">Elenco</a>
@@ -35,9 +35,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="curiosidades.html">Curiosidades</a>
               </li>
-              <li class="nav-item dropdown">
+              <li class="nav-item dropdown active">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Temporadas
+                  Temporadas <span class="sr-only">(atual)</span>
                 </a>
                 <div class="dropdown-menu" style="background: #f7003e;" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="seasonone.html">1ª Temporada</a>
@@ -45,6 +45,8 @@
                   <a class="dropdown-item" href="seasonthree.html">3ª Temporada</a>
                 </div>
               </li> 
+              <li><a href="https://www.instagram.com/strangerthingstv/" target="_blank"><img id="rede1" class="img-fluid" src="imagens/instagram_logo.png" alt="instagran"></a></li>
+              <li><a href="https://twitter.com/Stranger_Things" target="_blank"><img id="rede2" class="img-fluid" src="imagens/twitter-logo-4.png" alt="twitter"></a></li>
             </ul>
           </div>
         </nav>
@@ -54,30 +56,43 @@
         <h2 class="sub1">Inicio >> Stranger Things: 2ª Temporada</h2>
         <h3>2ª Temporada</h3>
         <p class="tworecuo">Stranger Things 2 foi confirmado pela Netflix em 31 de agosto de 2016 para um lançamento de 2017. Um trailer de anúncio revelou que a segunda temporada consistiu em nove episódios, além de mostrar o título provisório de cada episódio. As filmagens da temporada começaram em Atlanta, Geórgia, em 7 de novembro de 2016.</p>
-        <p class="tworecuo">Passado em Hawkins no outono de 1984, a história continua enquanto forças sobrenaturais mais uma vez começam a afetar a cidade. Enquanto a temporada atende ao elenco e aos personagens principais da primeira temporada, vários novos personagens são introduzidos: o moleca Max e seu meio-irmão mais velho Billy , uma garota chamada Kali conectada ao Hawkins Lab , o gerente da RadioShack Bob Newby, O agente do Departamento de Energia Dr. Owens e o desgraçado jornalista que virou teórico da conspiração Murray Bauman. Semelhante à temporada anterior, a 2ª temporada foi elogiada pela crítica e pelo público e foi elogiada por ser muito mais voltada para o terror.</p>
-        <h4 class="twoh4">Episodeos</h4>
-        <ol class="twoOl">
-          <li>"MADMAX"</li>
-          <li>"Trick or Treat, Freak"</li>
-          <li>"Will the Wise"</li>
-          <li>"The Pollywog"</li>
-          <li>"Dig Dug"</li>
-          <li>"The Spy"</li>
-          <li>"The Lost Sister"</li>
-          <li>"The Mind Flayer"</li>
-          <li>"The Gate"</li>
-        </ol>
-        <h4 class="oneh4">Ler mais</h4>
-        <ul class="oneUl">
-          <li><a class="oneA" href="">Stranger Things: Imagem de bastidores revela retorno de personagem importante na 4ª temporada</a></li>
-          <li><a class="oneA" href="">Stranger Things: Confira 20 referências e easter-eggs da 3ª temporada</a></li>
-          <li><a class="oneA" href="">Stranger Things: David Harbour revela que 4ª temporada já é sua favorita</a></li>
-        </ul>
+        <p class="tworecuo">Estamos em 1984 e os cidadãos de Hawkins , Indiana ainda estão se recuperando dos horrores do Demogorgon e dos segredos do Laboratório Hawkins . Will Byers foi resgatado do Upside Down, mas uma entidade maior e sinistra ainda ameaça aqueles que sobreviveram.</p>
+        <ul id=album-fotos>
+          <li id=fotos07></li>
+          <li id=fotos08></li>
+          <li id=fotos08></li>
+          <li id=fotos10></li>
+          <li id=fotos11></li>
+          <li id=fotos12></li>
+        </ul>   
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+          <h4 class="twoh4">Episodeos</h4>
+          <ol class="twoOl">
+            <li>"MADMAX"</li>
+            <li>"Trick or Treat, Freak"</li>
+            <li>"Will the Wise"</li>
+            <li>"The Pollywog"</li>
+            <li>"Dig Dug"</li>
+            <li>"The Spy"</li>
+            <li>"The Lost Sister"</li>
+            <li>"The Mind Flayer"</li>
+            <li>"The Gate"</li>
+          </ol>
+          <h4 class="twoh4">Trailer</h4>
+          <p class="tworecuo" style="font-family: Arial, Helvetica, sans-serif; font-size: 12pt;">Trailer da 2ª Temporada de Stranger Things:</p>
+          <center><iframe width="560" height="315" src="https://www.youtube.com/embed/R1ZXOOLMJ8s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+          <h4 class="twoh4">Ler mais</h4>
+          <ul class="oneUl">
+            <li><a class="oneA" href="">Stranger Things: A mais assustadora!</a></li>
+            <li><a class="oneA" href="">Stranger Things: Teorias da 4ª Temporada</a></li>
+            <li><a class="oneA" href="">Stranger Things: Melhores Episodeos</a></li>
+          </ul>
       </div>
+      
       <!-- RODAPÉ -->  
-
+      
       <div id="footer">
-        <p><i>Copyright ©2021 - by Matheus Oliveira</i><a href="https://www.instagram.com/matheusfoliveira_/?hl=pt-br" target="_blank"><img class="imgfooter img-fluid" src="imagens/instagram_logo.png"></a></p>     
+        <p><i>Copyright ©2021 - by Matheus Oliveira</i><a href="https://www.instagram.com/matheusfoliveira_/?hl=pt-br" target="_blank"><img class="imgfooter img-fluid" src="imagens/instagram_logo.png"></a><a href="https://github.com/mat1135"><img class="imgfooter img-fluid" src="imagens/GitHub-logo.png"></a></p>     
       </div>
 
       <!-- JavaScript (Opcional) -->
