--- a/Elenco.html
+++ b/Elenco.html
@@ -46,8 +46,8 @@
                       <a class="dropdown-item" href="seasonthree.html">Temporada 3</a>
                     </div>
                   </li> 
-                  <a href="https://www.instagram.com/strangerthingstv/" target="_blank"><img id="rede1" class="img-fluid" src="imagens/instagram_logo.png" alt="instagran"></a>
-                  <a href="https://twitter.com/Stranger_Things" target="_blank"><img id="rede2" class="img-fluid" src="imagens/twitter-logo-4.png" alt="twitter"></a>
+                  <li><a href="https://www.instagram.com/strangerthingstv/" target="_blank"><img id="rede1" class="img-fluid" src="imagens/instagram_logo.png" alt="instagran"></a></li>
+                  <li><a href="https://twitter.com/Stranger_Things" target="_blank"><img id="rede2" class="img-fluid" src="imagens/twitter-logo-4.png" alt="twitter"></a></li>
                 </ul>
               </div>
             </nav>
@@ -179,6 +179,13 @@
                     </figure>
                   </div>
                 </div>
+                <h3 class="curih4">Ler mais</h3>
+                <ul class="oneUl">
+                  <li><a class="oneA" href="">Stranger Things: A mais assustadora!</a></li>
+                  <li><a class="oneA" href="">Stranger Things: Teorias da 4ª Temporada</a></li>
+                  <li><a class="oneA" href="">Stranger Things: Você conhece o Demogorgon?</a></li>
+                  <li><a class="oneA" href="">Stranger Things: Melhores Episodeos</a></li>
+                </ul>
               </div>
             </div>
             
