--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                   <a class="dropdown-item" href="seasonthree.html">Temporada 3</a>
                 </div>
               </li> 
-              <a href="https://www.instagram.com/strangerthingstv/" target="_blank"><img id="rede1" class="img-fluid" src="imagens/instagram_logo.png" alt="instagran"></a>
-              <a href="https://twitter.com/Stranger_Things" target="_blank"><img id="rede2" class="img-fluid" src="imagens/twitter-logo-4.png" alt="twitter"></a>
+              <li><a href="https://www.instagram.com/strangerthingstv/" target="_blank"><img id="rede1" class="img-fluid" src="imagens/instagram_logo.png" alt="instagran"></a></li>
+              <li><a href="https://twitter.com/Stranger_Things" target="_blank"><img id="rede2" class="img-fluid" src="imagens/twitter-logo-4.png" alt="twitter"></a></li>
             </ul>
           </div>
         </nav>
@@ -92,7 +92,7 @@
           <div class="row">               
             <div class="col-md-3">
               <figure class="img-thumbnail">
-                <img class="figure-img img-fluid" src="imagens/1 temp.jpg" alt="Filme Mulher Maravilha">
+                <img class="figure-img img-fluid" src="imagens/Teorias da 4ª Temporada.jpg" alt="">
                 <figcaption class="figure-caption">
                   <h3 class="homeh3">Teorias da 4ª Temporada</h3>
                   <p class="homeP">Com a suposta morte de Hopper, personagem de David Harbour...</p>
@@ -102,7 +102,7 @@
               </div>
               <div class="col-md-3">
                   <figure class="img-thumbnail">
-                  <img class="figure-img img-fluid" src="imagens/2 temp.jpg" alt="Filme Mulher Maravilha">
+                  <img class="figure-img img-fluid" src="imagens/Você conhece o Demogorgon.jpg" alt="Filme Mulher Maravilha">
                       <figcaption class="figure-caption">
                           <h3 class="homeh3">Você conhece o Demogorgon?</h3>
                           <p class="homeP">A série deixou algumas perguntas que nunca foram respondidas...</p>
@@ -112,7 +112,7 @@
               </div>
               <div class="col-md-3">
                 <figure class="img-thumbnail">
-                  <img class="figure-img img-fluid" src="imagens/3 temp.jpg" alt="Filme Mulher Maravilha">
+                  <img class="figure-img img-fluid" src="imagens/Melhores Episodeos.jpeg" alt="Filme Mulher Maravilha">
                   <figcaption class="figure-caption">
                     <h3 class="homeh3">Melhores Episodeos</h3>
                     <p class="homeP">Homenagem aos mistérios sobrenaturais clássicos dos anos 80...</p>
@@ -122,7 +122,7 @@
               </div>
               <div class="col-md-3">
                 <figure class="img-thumbnail">
-                  <img class="figure-img img-fluid" src="imagens/4 temp.jpg" alt="Filme Mulher Maravilha">
+                  <img class="figure-img img-fluid" src="imagens/A mais assustadora!.jpg" alt="Filme Mulher Maravilha">
                   <figcaption class="figure-caption">
                     <h3 class="homeh3">A mais assustadora!</h3>
                     <p class="homeP">Gaten Matarazzo, o Dustin de "Stranger Things", promete que a...</p>
@@ -137,9 +137,8 @@
       <!-- RODAPÉ --> 
       
       <div id="footer">
-        <p><i>Copyright ©2021 - by Matheus Oliveira</i><a href="https://www.instagram.com/matheusfoliveira_/?hl=pt-br" target="_blank"><img class="imgfooter img-fluid" src="imagens/instagram_logo.png"></a></p>     
+        <p><i>Copyright ©2021 - by Matheus Oliveira</i><a href="https://www.instagram.com/matheusfoliveira_/?hl=pt-br" target="_blank"><img class="imgfooter img-fluid" src="imagens/instagram_logo.png"></a><a href="https://github.com/mat1135"><img class="imgfooter img-fluid" src="imagens/GitHub-logo.png"></a></p>     
       </div>
-
 
       <!-- JavaScript (Opcional) -->
       <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
